<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"/>
<!--            android:src="@drawable/firebase_lockup_400" />-->

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/phone_title_text"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_marginBottom="16dp"
            tools:text="Firebase User ID: 123456789abc" />

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Phone Number"
                    android:layout_marginBottom="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/field_phone_number"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Verification Code"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/field_verification_code"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_start_verification"
                    android:layout_marginRight="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"/>

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_verify_phone"
                    android:layout_marginLeft="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"/>

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_resend"
                    android:layout_marginLeft="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:textAlignment="center"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>



    </LinearLayout>


<!--    <RelativeLayout-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:background="@color/grey_300"-->
<!--        android:gravity="center_vertical">-->

<!--        <LinearLayout-->
<!--            android:id="@+id/phone_auth_fields"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:paddingLeft="16dp"-->
<!--            android:paddingRight="16dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:weightSum="2.0">-->

<!--                <EditText-->
<!--                    android:id="@+id/field_phone_number"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/hint_phone_number"-->
<!--                    android:layout_weight="1.0"-->
<!--                    android:inputType="phone"/>-->

<!--                <EditText-->
<!--                    android:id="@+id/field_verification_code"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/hint_verification_code"-->
<!--                    android:layout_weight="1.0"-->
<!--                    android:inputType="number"/>-->

<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:weightSum="3.0">-->

<!--                <Button-->
<!--                    android:theme="@style/ThemeOverlay.MyDarkButton"-->
<!--                    android:id="@+id/button_start_verification"-->
<!--                    android:layout_marginLeft="5dp"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1.0"-->
<!--                    android:text="@string/start_phone_auth"/>-->

<!--                <Button-->
<!--                    android:theme="@style/ThemeOverlay.MyDarkButton"-->
<!--                    android:id="@+id/button_verify_phone"-->
<!--                    android:layout_marginLeft="5dp"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1.0"-->
<!--                    android:text="@string/verify_phone_auth"/>-->

<!--                <Button-->
<!--                    android:theme="@style/ThemeOverlay.MyDarkButton"-->
<!--                    android:id="@+id/button_resend"-->
<!--                    android:layout_marginLeft="5dp"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1.0"-->
<!--                    android:text="@string/resend_phone_auth"/>-->
<!--            </LinearLayout>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/signed_in_buttons"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingLeft="16dp"-->
<!--            android:paddingRight="16dp"-->
<!--            android:visibility="gone"-->
<!--            android:weightSum="1.0">-->

<!--            <Button-->
<!--                android:id="@+id/sign_out_button"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1.0"-->
<!--                android:text="@string/sign_out"-->
<!--                android:theme="@style/ThemeOverlay.MyDarkButton" />-->

<!--        </LinearLayout>-->

<!--    </RelativeLayout>-->